Modules/Content/assets/sass/style.scss
.content-module {
    margin: 0 !important;
    @include mq(laptop) {
        margin: 2.4rem 0 !important;
    }
}

.content {
    margin-top: 0;
    margin-left: -30px;
    margin-right: -30px;
    @include mq(tablet) {
        margin-top: 10px;
        margin-left: 0;
        margin-right: 0;
    }
    &__left,
    &__right {
        flex-basis: 100%;
    }
    &__left {
        p,
        h2 {
            text-align: center;
            @include mq(tablet) {
                text-align: start;
            }
        }
        padding: 0 40px;
        @include mq(tablet) {
            padding: 0 20px;
        }
        @include mq(laptop) {
            padding: 0;
        }
        @include mq(tablet) {
            flex-basis: 58%;
        }
        &.get__started {
            background-color: $darkBlue !important;
            p,
            h1,
            h2,
            h3,
            h4,
            h5,
            h6 {
                text-align: start !important;
            }
        }
        &.success__story {
            p {
                text-align: start !important;
                font-style: normal;
                font-weight: normal;
                font-size: 14px;
                line-height: 212.4%;
            }
            background-color: $lightGray !important;
            .content__left__footer {
                background-color: $darkGray !important;
            }
        }
        &__form {
            flex-basis: 100%;
            border-top: 1px solid $darkYellow;
            margin: 0 12px 32px 0;
            @include mq(tablet) {
                flex-basis: 46%;
            }
            &__title {
                font-family: 'Futura';
                padding: 51px 0 16px 0;
                font-weight: 700;
                font-size: 18px;
                color: white;
                @include mq(laptop) {
                    padding: 24px 0 16px 0;
                }
                @include mq(desktop) {
                    width: 100%;
                }
            }
            &__description {
                font-weight: normal;
                font-size: 14px;
                line-height: 19px;
                color: rgb(226 226 226 / 80%);
                margin-bottom: 24px !important;
                @include mq(laptop) {
                    margin-bottom: inherit;
                }
            }
            &__url {
                display: block;
                margin-top: 16px;
                text-decoration: underline;
                font-weight: bold !important;
                font-size: 14px;
                line-height: 17px;
                color: $darkYellow;
                &:hover {
                    color: white;
                    text-decoration: none;
                }
            }
        }
        &__topdesc {
            &__success__story {
                font-style: italic;
                font-weight: 750;
                font-size: 16px;
                line-height: 20px;
                margin-top: 30px !important;
                color: $starOrange;
            }
        }
        &__title {
            &__get__started {
                margin-bottom: 24px;
                font-weight: 750;
                font-size: 30px;
                color: $darkYellow;
                width: 80%;
                @include mq(tablet) {
                    width: 70%;
                }
            }
            &__success__story {
                font-style: italic;
                font-weight: 750;
                font-size: 16px;
                line-height: 18px;
                color: $darkBlue;
                margin-top: 30px !important;
                font-family: 'Futura';
                @include mq(laptop) {
                    margin-top: 20px !important;
                }
            }
            &__register {
                text-transform: uppercase;
                font-weight: 750;
                font-size: 28px;
                color: $darkBlue;
            }
        }
        &__footer {
            background-color: $lightGray;
            margin: 0 -40px;
            text-align: center;
            @include mq(tablet) {
                margin: 0 -20px;
            }
            @include mq(laptop) {
                margin: unset;
                text-align: start;
            }
            &__title {
                color: $starOrange;
                font-family: 'Futura';
                font-style: italic;
                font-weight: 750;
                font-size: 14px;
                line-height: 17px;
                span {
                    font-family: 'Futura';
                    font-weight: bold;
                }
                .register__footer__container__title {
                    color: #1E5C6B;
                }
            }
            &__desc {
                color: #1E5C6B;
                font-size: 14px;
                line-height: 19px;
                // text-decoration-line: underline;
                margin: 10px 0 0 0;
                font-weight: 400 !important;
                font-style: normal;
                @include mq(tablet) {
                    margin: 0 10px 0 10px;
                }
            }
        }
        &__description {
            &__register {
                p {
                    font-weight: normal;
                    font-size: 16px;
                    line-height: 19px;
                    color: black;
                }
                .apply__button {
                    padding: 16px 45px;
                }
            }
        }
    }
    &__right {
        @include mq(tablet) {
            flex-basis: 50%;
        }
        img {
            height: 100% !important;
            object-fit: cover;
        }
    }
    .bg_gray {
        background-color: $lightGray;
        .content__left__footer {
            background-color: $lightGray;
        }
    }
    .bg_blue {
        background-color: $turqouiseBlue;
    }
    .bg_yellow {
        background-color: $mixedYellow;
        .content__left__footer {
            background-color: $darkYellow;
        }
    }
}

.register__footer__container {
    text-align: left !important;
    padding-left: 5rem !important;
    @include mq(tablet) {
        margin: 0 -20px !important;
    }
    @include mq(laptop) {
        margin: unset !important;
        text-align: start !important;
        padding-left: 7.2rem !important;
    }
}

.apply__button {
    border: none;
    padding: 16px 25px;
    background: $starOrange;
    border-radius: 4px;
    a {
        font-style: italic;
        color: white;
        font-family: 'Futura' !important;
        font-weight: 750 !important;
        &:hover {
            text-decoration: none;
        }
    }
    &:hover {
        background: #eb7466e8;
    }
    &__other {
        margin-left: 5rem;
        font-size: 14px;
        line-height: 17px;
        text-align: center;
        text-decoration-line: underline;
        color: $darkBlue;
    }
}

.content-wrapper {
    margin: 265px auto 50px;
    @include mq(tablet) {
        width: 482px;
        margin: 192px auto 50px;
    }
    h1 {
        font-family: $font-family-base;
        font-style: italic;
        font-weight: 750;
        font-size: 35px;
        text-transform: uppercase;
        color: #1E5C6B;
    }
    h2 {
        font-family: $font-family-base;
        font-style: italic;
        font-weight: 750;
        font-size: 18px;
        text-transform: uppercase;
        color: #1E5C6B;
    }
    p {
        font-family: $font-family-montserrat;
        font-style: normal;
        font-weight: normal;
        font-size: 14px;
        line-height: 19px;
        color: #000000;
    }
    img {
        width: 100%;
        height: 100%;
        margin: 40px 0;
    }
}

.content__apply__with__others {
    display: flex;
    flex-direction: column;
    align-items: center;
    @include mq(tablet) {
        flex-direction: row;
        justify-content: flex-start;
    }
    .apply__button {
        width: fit-content;
        margin-top: 7rem !important;
        @include mq(tablet) {
            margin-top: 2.4rem !important;
        }
    }
    .apply__button__other {
        margin-left: 0rem;
        margin-top: 5rem;
        @include mq(laptop) {
            margin-top: 2.4rem;
            margin-left: 5rem;
        }
    }
}

